 - Core: Fix ROM patches not being unloaded when disabled (fixes mgba.io/i/962)
 - GBA I/O: Fix writing to DISPCNT CGB flag (fixes mgba.io/i/902)
 - GBA Memory: Partially revert prefetch changes (fixes mgba.io/i/840)
 - PSP2: Fix issues causing poor audio
 - Wii: Fix screen tear when unpausing
 - GBA: Fix some GBA ROM misdetection (fixes mgba.io/i/978)
 - GBA Hardware: RTC accuracy improvements
Misc:
 - GBA: Improve multiboot image detection
 - GB MBC: Remove erroneous bank 0 wrapping
 - 3DS: Scale font based on glyph heights (fixes mgba.io/i/961)
 - PSP2: Use system enter key by default

0.6.1: (2017-10-01)
Bugfixes:
 - GB, GBA: Fix crashes when attempting to identify null VFiles
 - GB, GBA: Fix sync to video with frameskip
 - GB, GBA Savedata: Fix savestate-related save overwriting (fixes mgba.io/i/834)
 - GB Audio: Fix NRx2 writes while active (fixes mgba.io/i/866)
 - GB Core: Fix palette loading when loading a foreign config
 - GB MBC: Pocket Cam memory should be accessible without enabling
 - GB MBC: Fix SRAM sizes 4 and 5
 - GB MBC: Fix RTC initialization (fixes mgba.io/i/825)
 - GB MBC: Fix RTC loading when file size is off
 - GB Memory: Initialize peripheral pointers
 - GB Memory: Prevent accessing empty SRAM (fixes mgba.io/i/831)
 - GB Memory: Fix HDMA count starting in mode 0 (fixes mgba.io/i/855)
 - GB Memory: Actually load latch time from savestate
 - GB Serialize: Fix deserializing video STAT
 - GB Video: Fix 16-bit screenshots (fixes mgba.io/i/826)
 - GB Video: Fix potential hang when ending mode 0
 - GB Video: Fix read mode when enabling LCD
 - GBA: Reset active region as needed when loading a ROM
 - GBA: Fix keypad IRQs not firing when extra buttons are pressed
 - GBA BIOS: Use core's VRAM variable instead of renderer's
 - GBA Cheats: Fix PARv3 multiline blocks (fixes mgba.io/i/889)
 - GBA I/O: Fix reading from a few invalid I/O registers (fixes mgba.io/i/876)
 - GBA Savedata: Fix 512 byte EEPROM saving as 8kB (fixes mgba.io/i/877)